# anchor

./: CMakeLists.txt  README.md
docs/: getting-started.md  reference.md  tooling.md
src/: arena.c  arena.h  ast.h  codegen.c  codegen.h  compile.c  compile.h  error.c  error.h  fs.c  fs.h  lexer.c  lexer.h  lsp_analysis.c  lsp_analysis.h  lsp_json.c  lsp_json.h  lsp_server.c  lsp_server.h  lsp_transport.c  lsp_transport.h  macro.h  main.c  module.c  module.h  os.c  os.h  package.c  package.h  parser.c  parser.h  sema.c  sema.h  type.c  type.h
tests/: main.anc  run_tests.py
tests/allocators/: anchor
tests/allocators/src/: main.anc
tests/basic/: anchor
tests/basic/src/: main.anc  utils.anc
tests/cases/: arithmetic.anc  array_basic.anc  array_inferred.anc  array_len.anc  basic_return.anc  bitwise_xor.anc  bool_and_or.anc  bool_not.anc  break_in_for.anc  break_in_while.anc  break_outside_loop.anc  cast_int_to_short.anc  cast_ref_downcast.anc  cast_usize_to_int.anc  compound_assign.anc  const_reassign.anc  continue_for.anc  continue_while.anc  deref_read.anc  deref_ref.anc  deref_struct_ptr.anc  deref_write.anc  duplicate_variable.anc  empty_struct.anc  enum_basic.anc  enum_compare.anc  enum_copy.anc  enum_return.anc  enum_var_typed.anc  err_arg_type_mismatch.anc  err_assign_not_lvalue.anc  err_assign_type_mismatch.anc  err_cast_bool_to_int.anc  err_cast_string_to_int.anc  err_continue_outside_loop.anc  err_deref_non_ptr.anc  err_duplicate_match_case.anc  err_enum_bad_variant.anc  err_enum_cast_string.anc  err_for_loop_non_integer.anc  (+88 more)
tests/generic/: anchor
(+2 files in other folders)
